--- a/src/main/resources/com/example/demo/form.fxml
+++ b/src/main/resources/com/example/demo/form.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -88,28 +87,75 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <VBox prefHeight="373.0" prefWidth="640.0">
+            <VBox alignment="CENTER" prefHeight="373.0" prefWidth="640.0">
                <children>
-                  <HBox prefHeight="41.0" prefWidth="640.0">
+                  <VBox alignment="CENTER" prefHeight="49.0" prefWidth="640.0">
                      <children>
-                        <Label fx:id="nameLabel" text="Text :  " textFill="#00000052">
+                        <Label fx:id="nameLabel12" text="Produit en Croix" textFill="#00000052">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="nameField">
+                     </children>
+                  </VBox>
+                  <HBox alignment="TOP_CENTER" prefHeight="41.0" prefWidth="640.0">
+                     <children>
+                        <Label fx:id="nameLabel1" text="Valeur initiale" textFill="#00000052">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="30.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="note1Field" onKeyPressed="#calculate" onKeyReleased="#calculate" onKeyTyped="#calculate">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label fx:id="nameLabel13" text="/" textFill="#00000052">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="coef1Field" onKeyPressed="#calculate" onKeyReleased="#calculate" onKeyTyped="#calculate">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
                         </TextField>
-                        <Button fx:id="submitBtn" cancelButton="true" mnemonicParsing="false" onMouseClicked="#submit" prefHeight="26.0" prefWidth="130.0" text="Button">
-                           <HBox.margin>
-                              <Insets left="30.0" />
-                           </HBox.margin>
-                        </Button>
                      </children>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
                   </HBox>
                   <Label fx:id="resultLabel" />
+                  <HBox alignment="TOP_CENTER" prefHeight="41.0" prefWidth="640.0">
+                     <children>
+                        <Label fx:id="nameLabel11" text="Valeur finale /20" textFill="#00000052">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="note2Field" editable="false">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label fx:id="nameLabel14" text="/" textFill="#00000052">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="coef2Field" editable="false">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </TextField>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
