--- a/src/main/resources/com/example/demo/form.fxml
+++ b/src/main/resources/com/example/demo/form.fxml
@@ -44,7 +44,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.FormController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller.FormController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -156,6 +156,7 @@
                         </TextField>
                      </children>
                   </HBox>
+                  <VBox fx:id="vBoxList" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </VBox>
          </children>
